UC-463:CoD: defensetype ,attacktype,-str & -init refactoring

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -2289,65 +2289,24 @@
             if (source === "wits" || source === "composure") {
                 updateMoralHealth()
             };
-        });
-    });
-
-    on("change:wits", function() {
-        getAttrs(["defense_select"], (v) => { // PRD-1407
-            updateDefense(v.defense_select);
-        });
-    });
-
-    on("change:dexterity", function() {
-        getAttrs(["defense_select"], (v) => { // PRD-1407
-            updateDefense(v.defense_select);
+            if (source === "wits" || source === "dexterity" || source === "athletics" || source === "brawl" || source === "weaponry") {
+                getAttrs(["defense_select"], (v) => { // PRD-1407
+                    updateDefense(v.defense_select);
+                });
+            };
         });
     });
 
     on("change:stamina", function() {
         updateHealth();
     });
+    ["0","1","2","3","4","5"].forEach((attr) => {
+        on(`change:attack_type${attr}`, (eventInfo) => {
+          const source = eventInfo.sourceAttribute;
 
-    on("change:athletics", function() {
-        getAttrs(["defense_select"], (v) => { // PRD-1407
-            updateDefense(v.defense_select);
+          updateRolls("rolltype");
+
         });
-    });
-
-    on("change:brawl", function() {
-        getAttrs(["defense_select"], (v) => { // PRD-1407
-            updateDefense(v.defense_select);
-        });
-    });
-
-    on("change:weaponry", function() {
-        getAttrs(["defense_select"], (v) => { // PRD-1407
-            updateDefense(v.defense_select);
-        });
-    });
-
-    on("change:attack_type0", function() {
-        updateRolls("rolltype");
-    });
-
-    on("change:attack_type1", function() {
-        updateRolls("rolltype");
-    });
-
-    on("change:attack_type2", function() {
-        updateRolls("rolltype");
-    });
-
-    on("change:attack_type3", function() {
-        updateRolls("rolltype");
-    });
-
-    on("change:attack_type4", function() {
-        updateRolls("rolltype");
-    });
-
-    on("change:attack_type5", function() {
-        updateRolls("rolltype");
     });
 
     on("change:attack", function() {
@@ -2355,44 +2314,13 @@
         updateAttacks();
     });
 
-    on("change:attack_initative0", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_initative1", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_initative2", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_initative3", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_initative4", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_strength0", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_strength1", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_strength2", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_strength3", function() {
-        updateAttacks();
-    });
-
-    on("change:attack_strength4", function() {
-        updateAttacks();
+    ["_initiative0","_initiative1","_initiative2","_initiative3","_initiative4","_strength0","_strength1","_strength2","_strength3","_strength4"].forEach((attr) => {
+      on(`change:attack${attr}`, (eventInfo) => {
+          const source = eventInfo.sourceAttribute;
+          console.log(source);
+          updateAttacks();
+          console.log("updateAttacks:",source);
+      });
     });
 
     on("change:armor_flag0", function() {
