--- a/COPS/COPS.html
+++ b/COPS/COPS.html
@@ -603,7 +603,6 @@
 								<option value="Camion">Camion</option>
 								<option value="Chenille">Chenillé</option>
 								<option value="Cheval">Cheval</option>
-								<option value="Hélico">Hélico</option>
 								<option value="Moto">Moto</option>
 							</select>
 							<input type="number" name="attr_ConduiteSpe" value="8" max="8" />
@@ -737,9 +736,6 @@
 						</div>
 					</fieldset>
 				</div>
-			</div>
-			
-			<div>
 				<div>
 					<div>
 						<button type='roll' value="@{tJet}&{template:base} {{nom=Deguisement}} {{att=@{attitude}}} {{init=@{initiative}}} @{carDeguisement} {{dNoir=[[@{dNoir}d10>@{Deguisement}!]]}} {{dNoirN=[[@{dNoir}]]}}" name='roll_Deguisement' title="Jet Deguisement"></button>
@@ -760,8 +756,10 @@
 							<option value="{{score=[[ [[(@{Sang-Froid}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{DeguisementDBleu}-@{Sang-FroidDBleu})]]d10>@{Deguisement}!]]}} {{dBleu=[[([[(@{dBleu}+@{DeguisementDBleu}+@{Sang-FroidDBleu})]]d10>@{Deguisement}!)*2]]}} {{dBleuN=[[@{dBleu}+@{DeguisementDBleu}+@{Sang-FroidDBleu}]]}}">SFR</option>
 						</select>
 					</div>
-				</div>	
-
+				</div>
+			</div>
+			
+			<div>
 				<div>
 					<div>
 						<button type='roll' value="@{tJet}&{template:base} {{nom=Discretion}} {{att=@{attitude}}} {{init=@{initiative}}} @{carDiscretion} {{dNoir=[[@{dNoir}d10>@{Discretion}!]]}} {{dNoirN=[[@{dNoir}]]}}" name='roll_Discretion' title="Jet Discretion"></button>
@@ -1122,6 +1120,57 @@
 						</div>
 					</fieldset>
 				</div>
+				
+				<div>
+					<div>
+						<button type='roll' value="@{tJet}&{template:base} {{nom=Pilotage}} {{att=@{attitude}}} {{init=@{initiative}}} @{carPilotage} {{dNoir=[[@{dNoir}d10>@{Pilotage}!]]}} {{dNoirN=[[@{dNoir}]]}}" name='roll_Pilotage' title="Jet Pilotage"></button>
+						<span>Pilotage</span>
+						<input type="number" name="attr_Pilotage" value="10" min="10" />
+						<input type="number" name="attr_PilotageDBleu" title="Dés bleus de la compétence" value="0" />
+						<label>
+							<input type="checkbox" name="attr_carPilotage" value="{{score=[[ [[(@{Coordination}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{CoordinationDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{CoordinationDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{CoordinationDBleu}]]}}" checked />
+							<span title="COO"></span>
+						</label>
+						<select name="attr_carPilotage">
+							<option value="{{score=[[ [[(@{Carrure}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{CarrureDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{CarrureDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{CarrureDBleu}]]}}">CAR</option>
+							<option value="{{score=[[ [[(@{Charme}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{CharmeDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{CharmeDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{CharmeDBleu}]]}}">CHA</option>
+							<option value="{{score=[[ [[(@{Coordination}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{CoordinationDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{CoordinationDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{CoordinationDBleu}]]}}" selected>COO</option>
+							<option value="{{score=[[ [[(@{Education}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{EducationDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{EducationDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{EducationDBleu}]]}}">EDU</option>
+							<option value="{{score=[[ [[(@{Perception}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{PerceptionDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{PerceptionDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{PerceptionDBleu}]]}}">PER</option>
+							<option value="{{score=[[ [[(@{Reflexes}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{ReflexesDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{ReflexesDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{ReflexesDBleu}]]}}">REF</option>
+							<option value="{{score=[[ [[(@{Sang-Froid}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageDBleu}-@{Sang-FroidDBleu})]]d10>@{Pilotage}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageDBleu}+@{Sang-FroidDBleu})]]d10>@{Pilotage}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageDBleu}+@{Sang-FroidDBleu}]]}}">SFR</option>
+						</select>
+					</div>
+				</div>
+				<div>
+					<fieldset class="repeating_pilotage">
+						<div>
+							<button type='roll' value="@{tJet}&{template:base} {{nom=Pilotage}} {{spe=@{nomPilotageSpe}}} {{att=@{attitude}}} {{init=@{initiative}}} @{carPilotageSpe} {{dNoir=[[@{dNoir}d10>@{PilotageSpe}!]]}} {{dNoirN=[[@{dNoir}]]}}" name='roll_PilotageSpe' title="Jet Pilotage Spé"></button>
+							<select name="attr_nomPilotageSpe">
+								<option value="Non Sélectionné">9+: Choix Spécialité</option>
+								<option value="Patrouilleur maritime">Patrouilleur maritime</option>
+								<option value="Hélicoptère">Hélicoptère</option>
+								<option value="Hovercraft">Hovercraft</option>
+								<option value="Avion">Avion</option>
+							</select>
+							<input type="number" name="attr_PilotageSpe" value="9" max="9"/>
+							<input type="number" name="attr_PilotageSpeDBleu" title="Dés bleus de la compétence" value="0" />
+							<label>
+								<input type="checkbox" name="attr_carPilotageSpe" value="{{score=[[ [[(@{Coordination}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{CoordinationDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{CoordinationDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{CoordinationDBleu}]]}}" checked />
+								<span title="COO"></span>
+							</label>
+							<select name="attr_carPilotageSpe">
+								<option value="{{score=[[ [[(@{Carrure}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{CarrureDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{CarrureDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{CarrureDBleu}]]}}">CAR</option>
+								<option value="{{score=[[ [[(@{Charme}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{CharmeDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{CharmeDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{CharmeDBleu}]]}}">CHA</option>
+								<option value="{{score=[[ [[(@{Coordination}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{CoordinationDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{CoordinationDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{CoordinationDBleu}]]}}" selected>COO</option>
+								<option value="{{score=[[ [[(@{Education}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{EducationDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{EducationDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{EducationDBleu}]]}}">EDU</option>
+								<option value="{{score=[[ [[(@{Perception}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{PerceptionDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{PerceptionDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{PerceptionDBleu}]]}}">PER</option>
+								<option value="{{score=[[ [[(@{Reflexes}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{ReflexesDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{ReflexesDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{ReflexesDBleu}]]}}">REF</option>
+								<option value="{{score=[[ [[(@{Sang-Froid}+@{modif}+@{nInitiative}+@{nAttitude}-@{dBleu}@{dMPopup}-@{PilotageSpeDBleu}-@{Sang-FroidDBleu})]]d10>@{PilotageSpe}!]]}} {{dBleu=[[([[(@{dBleu}+@{PilotageSpeDBleu}+@{Sang-FroidDBleu})]]d10>@{PilotageSpe}!)*2]]}} {{dBleuN=[[@{dBleu}+@{PilotageSpeDBleu}+@{Sang-FroidDBleu}]]}}">SFR</option>
+							</select>
+						</div>
+					</fieldset>
+				</div>
 					
 				<div>
 					<div>
@@ -1310,7 +1359,7 @@
 				<input type="number" name="attr_armeDecompte" value="12" title="Chargeur Actuel"/>
 				<input type="number" name="attr_armeM" value="12" title="Capacité du Chargeur"/>
 				<input type="number" name="attr_armeNbCharg" value="1"/>
-				<button type='roll' value='@{tJet}&{template:armement} {{nom=@{armeDescr}}} {{score=[[ [[(@{armePU})]]d6r@{armeRelance1}]]}} {{loca=[[1d10]]}} {{relance1=[[@{armeRelance1}]]}}' name='roll_Armement' title="Jet d'Arme"></button>
+				<button type='roll' value="@{tJet}&{template:armement} {{nom=@{armeDescr}}} {{score=[[ [[(@{armePU})]]d6r@{armeRelance1}]]}} {{loca=[[1d10]]}} {{relance1=[[@{armeRelance1}]]}} {{abdomen=[[1d6]]}} {{torse=[[2d6]]}} {{tete=[[3d6]]}}" name='roll_Armement' title="Jet d'Arme"></button>
 			</div>
 			
 			<div class="armesOptions">
@@ -1344,7 +1393,7 @@
 				<input type="number" name="attr_armeDecompte" value="0" title="Chargeur Actuel"/>
 				<input type="number" name="attr_armeM" value="0" title="Capacité du Chargeur"/>
 				<input type="number" name="attr_armeNbCharg" value="0"/>
-				<button type='roll' value='@{tJet}&{template:armement} {{nom=@{armeDescr}}} {{score=[[ [[(@{armePU})]]d6r@{armeRelance1}]]}} {{loca=[[1d10]]}} {{relance1=[[@{armeRelance1}]]}}' name='roll_Armement' title="Jet d'Arme"></button>
+				<button type='roll' value="@{tJet}&{template:armement} {{nom=@{armeDescr}}} {{score=[[ [[(@{armePU})]]d6r@{armeRelance1}]]}} {{loca=[[1d10]]}} {{relance1=[[@{armeRelance1}]]}} {{abdomen=[[1d6]]}} {{torse=[[2d6]]}} {{tete=[[3d6]]}}" name='roll_Armement' title="Jet d'Arme"></button>
 				<div class="armesOptions">
 					<label>
 						<input type="checkbox" name="attr_effetsParticuliers" value="on" />
@@ -1733,6 +1782,10 @@
 				<span>Localisation (1)</span>
 				<span>Jambes Gauche (-)</span>
 			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Jambes Droite (-)</span>
+			</div>
 		{{/rollTotal() loca 1}}
 		{{#rollTotal() loca 2}}
 			<div class="spe">
@@ -1743,6 +1796,10 @@
 				<span>Localisation (2)</span>
 				<span>Jambes Droite (-)</span>
 			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Abdomen ({{abdomen}})</span>
+			</div>
 		{{/rollTotal() loca 2}}
 		{{#rollTotal() loca 3}}
 			<div class="spe">
@@ -1751,57 +1808,81 @@
 			</div>
 			<div class="spe">
 				<span>Localisation (3)</span>
-				<span>Abdomen (1)</span>
+				<span>Abdomen ({{abdomen}})</span>
+			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Abdomen ({{abdomen}})</span>
 			</div>
 		{{/rollTotal() loca 3}}
 		{{#rollTotal() loca 4}}
 			<div class="spe">
 				<span>Loc. précédente</span>
-				<span>Abdomen (1)</span>
+				<span>Abdomen ({{abdomen}})</span>
 			</div>
 			<div class="spe">
 				<span>Localisation (4)</span>
-				<span>Abdomen (1)</span>
+				<span>Abdomen ({{abdomen}})</span>
+			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Torse ({{torse}})</span>
 			</div>
 		{{/rollTotal() loca 4}}
 		{{#rollTotal() loca 5}}
 			<div class="spe">
 				<span>Loc. précédente</span>
-				<span>Abdomen (1)</span>
+				<span>Abdomen ({{abdomen}})</span>
 			</div>
 			<div class="spe">
 				<span>Localisation (5)</span>
-				<span>Torse (2)</span>
+				<span>Torse ({{torse}})</span>
+			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Torse ({{torse}})</span>
 			</div>
 		{{/rollTotal() loca 5}}
 		{{#rollTotal() loca 6}}
 			<div class="spe">
 				<span>Loc. précédente</span>
-				<span>Torse (2)</span>
+				<span>Torse ({{torse}})</span>
 			</div>
 			<div class="spe">
 				<span>Localisation (6)</span>
-				<span>Torse (2)</span>
+				<span>Torse ({{torse}})</span>
+			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Torse ({{torse}})</span>
 			</div>
 		{{/rollTotal() loca 6}}
 		{{#rollTotal() loca 7}}
 			<div class="spe">
 				<span>Loc. précédente</span>
-				<span>Torse (2)</span>
+				<span>Torse ({{torse}})</span>
 			</div>
 			<div class="spe">
 				<span>Localisation (7)</span>
-				<span>Torse (2)</span>
+				<span>Torse ({{torse}})</span>
+			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Bras Droit (-)</span>
 			</div>
 		{{/rollTotal() loca 7}}
 		{{#rollTotal() loca 8}}
 			<div class="spe">
 				<span>Loc. précédente</span>
-				<span>Torse (2)</span>
+				<span>Torse ({{torse}})</span>
 			</div>
 			<div class="spe">
 				<span>Localisation (8)</span>
 				<span>Bras Droit (-)</span>
+			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Bras Gauche (-)</span>
 			</div>
 		{{/rollTotal() loca 8}}
 		{{#rollTotal() loca 9}}
@@ -1813,6 +1894,10 @@
 				<span>Localisation (9)</span>
 				<span>Bras Gauche (-)</span>
 			</div>
+			<div class="spe">
+				<span>Loc. suivante</span>
+				<span>Tête ({{tete}})</span>
+			</div>
 		{{/rollTotal() loca 9}}
 		{{#rollTotal() loca 10}}
 			<div class="spe">
@@ -1821,7 +1906,7 @@
 			</div>
 			<div class="spe">
 				<span>Localisation (10)</span>
-				<span>Tête (3)</span>
+				<span>Tête ({{tete}})</span>
 			</div>
 		{{/rollTotal() loca 10}}
 		{{#rollGreater() relance1 0}}
