UC-463:CoD: refactoring, added missing language tag

--- a/Chronicles of Darkness by Roll20/CofD by Roll20.html
+++ b/Chronicles of Darkness by Roll20/CofD by Roll20.html
@@ -2272,8 +2272,7 @@
     var allStats = ["intelligence","wits","resolve","strength","dexterity","stamina","presence","manipulation","composure","academics","computer","crafts","investigation","medicine","occult","politics","science","athletics","brawl","drive","firearms","larceny","stealth","survival","weaponry","animalken","empathy","expression","intimidation","persuasion","socialize","streetwise","subterfuge","animalism","auspex","celerity","dominate","majesty","nightmare","obfuscate","protean","resilience","vigor","crúac","thebansorcery","death","fate","forces","life","matter","mind","prime","spirit","space","time","potency"];
     var potencyNames = { mortal1:"", mortal2:"", vampire1:"Blood Potency", vampire2:"Blood Potency", werewolf1:"Primal Urge", werewolf2:"Primal Urge", mage1:"Gnosis", mage2:"Gnosis", promethean1:"Azoth", promethean2:"Azoth", changeling1:"Wyrd", changeling2:"Wyrd", demon:"Primum", beast:"Lair", hunter:"", geist1:"Psyche", mummy1:"Sekhem" };
 
-
-    ["intelligence", "wits", "resolve", "strength", "dexterity", "stamina", "presence","manipulation", "composure", "academics", "computer", "crafts", "investigation", "occult", "politics", "science", "athletics", "brawl", "drive", "firearms", "larceny", "stealth", "survival", "weaponry", "animalken", "empathy", "expression", "intimidation", "persuasion", "socialize", "streetwise", "subterfuge", "animalism", "auspex", "celerity", "dominate", "majesty", "nightmare", "obfuscate", "protean", "resilience", "vigor", "crúac", "thebansorcery", "death", "fate", "forces", "life", "matter", "mind", "prime", "spirit", "space", "time", "rolltype"].forEach((attr) => {
+    ["intelligence", "wits", "resolve", "strength", "dexterity", "stamina", "presence","manipulation", "composure", "academics", "computer", "crafts", "investigation", "occult", "politics", "science", "athletics", "brawl", "drive", "firearms", "larceny", "stealth", "survival", "weaponry", "animalken", "empathy", "expression", "intimidation", "persuasion", "socialize", "streetwise", "subterfuge", "animalism", "auspex", "celerity", "dominate", "majesty", "nightmare", "obfuscate", "protean", "resilience", "vigor", "crúac", "thebansorcery", "death", "fate", "forces", "life", "matter", "mind", "prime", "spirit", "space", "time","potency", "rolltype"].forEach((attr) => {
         on(`change:${attr} change:${attr}_flag`, (eventInfo) => {
             const source = eventInfo.sourceAttribute;
             const attribute = (attr.includes("flag")) ? attr.split(`_flag`)[0] : attr; //Remove the "_flag" part so we can pass the name
@@ -2282,28 +2281,28 @@
 
             console.log(source);
 
-           if (source === "resolve_flag" || source === "composure_flag") {
-                updateWillpower()
+            if (source === "resolve_flag" || source === "composure_flag") {
+                updateWillpower();
             };
 
             if (source === "wits" || source === "composure") {
-                updateMoralHealth()
+                updateMoralHealth();
             };
+
             if (source === "wits" || source === "dexterity" || source === "athletics" || source === "brawl" || source === "weaponry") {
                 getAttrs(["defense_select"], (v) => { // PRD-1407
                     updateDefense(v.defense_select);
                 });
             };
+
+            if (source === "stamina" || source === "resilience") {
+                updateHealth();
+            };
         });
     });
 
-    on("change:stamina", function() {
-        updateHealth();
-    });
-    ["0","1","2","3","4","5"].forEach((attr) => {
+    [...Array(6).keys()].forEach((attr) => {
         on(`change:attack_type${attr}`, (eventInfo) => {
-          const source = eventInfo.sourceAttribute;
-
           updateRolls("rolltype");
 
         });
@@ -2316,103 +2315,26 @@
 
     ["_initiative0","_initiative1","_initiative2","_initiative3","_initiative4","_strength0","_strength1","_strength2","_strength3","_strength4"].forEach((attr) => {
       on(`change:attack${attr}`, (eventInfo) => {
-          const source = eventInfo.sourceAttribute;
-          console.log(source);
           updateAttacks();
-          console.log("updateAttacks:",source);
       });
     });
 
-    on("change:armor_flag0", function() {
-        updateAttacks();
-    });
-
-    on("change:armor_flag1", function() {
-        updateAttacks();
-    });
-
-    on("change:armor_flag2", function() {
-        updateAttacks();
-    });
-
-    on("change:armor_strength0", function() {
-        updateAttacks();
-    });
-
-    on("change:armor_strength1", function() {
-        updateAttacks();
-    });
-
-    on("change:armor_strength2", function() {
-        updateAttacks();
+    ["","_flag0","_flag1","_flag2","_strength0","_strength1","_strength2"].forEach((attr) => {
+      on(`change:armor${attr}`, (eventInfo) => {
+          updateAttacks();
+      });
     });
 
     on("change:health", function() {
         updateAttacks();
     });
 
-    on("change:healthbox_1", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_2", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_3", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_4", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_5", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_6", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_7", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_8", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_9", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_10", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_11", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_12", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_13", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_14", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_15", function() {
-        updateAttacks();
-    });
-
-    on("change:healthbox_16", function() {
-        updateAttacks();
+    [...Array(17).keys()].forEach((attr) => {//healthbox nr. 0 through 16
+        on(`change:healthbox_${attr}`, (eventInfo) => {
+          const source = eventInfo.sourceAttribute;
+          console.log(source);
+          updateAttacks();
+        });
     });
 
     on("change:base_size", function() {
@@ -2434,9 +2356,6 @@
         updateRollType();
     });
 
-    on("change:resilience", function() {
-        updateHealth();
-    });
 
     on("change:bonus_health", function() {
         updateHealth();
@@ -2458,10 +2377,6 @@
         updateWoundPenalties();
     });
 
-    on("change:potency change:potency_flag", function() {
-       updateRolls("potency");
-    });
-
     on("change:rolltype_select", function() {
         updateRollType();
     });
@@ -2474,21 +2389,12 @@
 // ---------------------------------- Translation functions ------------------------------------------
     on("sheet:opened", function(eventInfo){
         setAttrs({
-            dicepoolmacro: getTranslationByKey("dice-pool")
-        });
-    });
-
-    on("sheet:opened", function(eventInfo){
-        setAttrs({
-            modifiermacro: getTranslationByKey("modifiers")
-        });
-    });
-
-    on("sheet:opened", function(eventInfo){
-        setAttrs({
+            dicepoolmacro: getTranslationByKey("dice-pool"),
+            modifiermacro: getTranslationByKey("modifiers"),
             unarmedmacro: getTranslationByKey("unarmed")
         });
     });
+
 // --------------------------------------------------------------------------------------------------
     var updateRolls = function(stat) {
         var type;
@@ -2615,7 +2521,7 @@
                     display = `${display}${getTranslationByKey("firearms")}\n`
                 }
                 if(v[attack_type].indexOf("ath=1") > -1) {
-                    display = `${display}${getTranslationByKey("Athletics")}\n`
+                    display = `${display}${getTranslationByKey("athletics")}\n`
                 }
             }
             else if(v.rollstyle === "@{rollsimple}") {
