remove console logs, bug fix

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -3951,7 +3951,6 @@
 	        // Attach listener
 	        on(`change:${field}`, (eventInfo) => {
 	        	const source = eventInfo.sourceAttribute;
-
 	        	if (source.includes("dicepool") || source.includes("specialization")) {
 	        		getAttrs([`${field}_spec`, `${field}_dicepool_modifier`], (v) => {
 	        			const spec = parseInt(v[`${field}_spec`]) || 0;
@@ -3962,6 +3961,8 @@
 	                        [`${field}_dicepool`]: tot
 	                    });
 	        		});
+	        		console.log(`%c Repeating Spells changed`. "color:green,font-size:16px");
+	        		console.log(eventinfo);
 	        	}  else  {
 	        		console.log(`Change to ${field} did not set attr`);
 	        	};
